# 2d-heat-solver-v2

./: README.md  config.toml  main.py  plan.md  pyproject.toml  requirements.txt  streamlit_app.py
notebooks/: demo.ipynb
src/: __init__.py  _types.py  analytics.py  boundary.py  reaction.py  solvers.py  visualization.py
tests/: test_solvers.py
