[project]
name = "numerical-pde-solver"
version = "1.0.0"
description = "2D Heat & Reaction-Diffusion PDE solver with explicit/implicit schemes"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "scipy>=1.14",
    "matplotlib>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "jupyter>=1.1",
]
app = [
    "streamlit>=1.40",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.pyright]
include = ["src", "main.py", "tests"]
extraPaths = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "C4"]
ignore = ["N803", "N806"]

[tool.ruff.format]
quote-style = "double"
